<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">JourneyD3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Journey Diablo 3</string>
    <string name="nav_header_subtitle">by Peryite</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings" tools:keep="@string/action_settings">Settings</string>

    <string name="menu_chapter">Chapter</string>
    <string name="menu_conquest">Conquest</string>
    <string name="menu_reward">Reward</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_action_restart">Restart</string>
    <string name="menu_action_update">Update</string>

    <string name="menu_title_information">Information</string>
    <string name="menu_title_action">Action</string>

    <string name="start_journey" tools:keep="@string/start_journey">Start Journey</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>


    <!--string formatted-->
    <string name="chapter_complete_vs_all_task">(%1$d/%2$d)</string>

    <!--credits-->
    <string name="credits_name">Credits</string>
    <string name="credits_mobile_app_name">Mobile Application</string>
    <string name="credits_mobile_app_description">by Peryite</string>
    <string name="credits_website_name">
        <a href="https://d3resource.com/journey/">Website</a>
    </string>
    <string name="credits_website_description">
        <a href="https://www.reddit.com/user/bagstone"> by bagstone</a>
    </string>

    <string name="credits_icons_name" tools:keep="@string/credits_icons_name">Icons for menu item</string>
    <string name="credits_icons_description_one" tools:keep="@string/credits_icons_description_one">
        <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from
        <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> is licensed by
        <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a>
    </string>
    <string name="credits_icons_description_two" tools:keep="@string/credits_icons_description_two">
        <a href="https://www.flaticon.com/authors/iconixar" title="iconixar">iconixar </a>from
        <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com </a> is licensed by
        <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a>
    </string>
</resources>
