<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPlannerBackground"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/credits_name"
                android:textColor="@color/colorTextJD3"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/credits_mobile_app_name"
                android:textColor="@color/colorTextJD3"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/credits_mobile_app_description"
                android:textColor="@color/colorTextJD3"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/credits_website_name"
                android:textColor="@color/colorTextJD3"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/websiteJourney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/credits_website_link"
                android:textColor="@color/colorTextJD3"
                android:textSize="30sp"
                android:linksClickable="true"
                android:onClick="goToJourney"/>

            <TextView
                android:id="@+id/websiteBagstone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/credits_website_description"
                android:textColor="@color/colorTextJD3"
                android:textSize="30sp"
                android:linksClickable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/credits_icons_name"
                android:textColor="@color/colorTextJD3"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/websiteFreepik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/credits_icons_description_one"
                android:textColor="@color/colorTextJD3"
                android:textSize="30sp"
                android:linksClickable="true"/>

            <TextView
                android:id="@+id/websiteIconixar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/credits_icons_description_two"
                android:textColor="@color/colorTextJD3"
                android:textSize="30sp"
                android:linksClickable="true"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>